--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VUE_APP_SITE_NAME = 'subweb'
-VUE_APP_API_URL = 'https://sub.ops.ci'
+VUE_APP_SITE_NAME = 'TEST'
+VUE_APP_API_URL = 'https://sub.juzcloud.com'
 VUE_APP_SHORT_URL = 'https://s.ops.ci'
